...
    );
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      key: const ValueKey('cloudity_mail_inbox'),
      appBar: AppBar(
        title: _searchOpen && !_showSettings
            ? TextField(
                controller: _searchController,
                autofocus: true,
                decoration: const InputDecoration(
...
